src/objects/Recurring_Donations_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the Recurring Donations Package</description>
    <fields>
        <fullName>Add_Campaign_to_All_Opportunites__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, all Opportunities for Recurring Donations will use the Campaign on the Recurring Donation. Otherwise, only the first Opportunity will have the Campaign.</inlineHelpText>
        <label>Add Campaign to All Opportunites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_Donations_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_Donations_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_RecurringDonations_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_RD_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Nightly_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents the scheduling of the nightly update to Recurring Donations. Any existing scheduled job will need to be removed through Setup-&gt;Monitoring-&gt;Scheduled Jobs</description>
        <inlineHelpText>Prevents the scheduling of the nightly update to Recurring Donations. Any existing scheduled job will need to be removed through Setup-&gt;Monitoring-&gt;Scheduled Jobs</inlineHelpText>
        <label>Disable Scheduling of Nightly Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Update_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Enable Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Email_Notifications__c</fullName>
        <description>DEPRECATED.  Replaced by the notification settings in the System Error settings panel.</description>
        <inlineHelpText>DEPRECATED.  Replaced by the notification settings in the System Error settings panel.</inlineHelpText>
        <label>DEPRECATED-Error Email Notifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Package_Update__c</fullName>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Has Package Update</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Batch_Run__c</fullName>
        <inlineHelpText>The date and time of the last batch update of Recurring Donations.</inlineHelpText>
        <label>Last Batch Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Update_Check__c</fullName>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Last Update Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Package_Version__c</fullName>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Max Package Version</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Donations__c</fullName>
        <defaultValue>50</defaultValue>
        <inlineHelpText>Restricts the total number of donations created for non-open-ended Recurring Donations. Default is 50.  Larger values may result in DML errors.</inlineHelpText>
        <label>Maximum Donations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nightly_Update_ID__c</fullName>
        <label>DEPRECATED-Nightly Update ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Failures__c</fullName>
        <inlineHelpText>Number of Recurring Donations unsuccessfully updated in the last batch operation.</inlineHelpText>
        <label>Number of Failures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Successes__c</fullName>
        <inlineHelpText>Number of Recurring Donations successfully updated in the last batch run.</inlineHelpText>
        <label>Number of Successes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Behavior__c</fullName>
        <description>Determines the behavior of any remaining open Opportunities when an open-ended Recurring Donation is moved to a closed status.</description>
        <inlineHelpText>Determines the behavior of any remaining open Opportunities when an open-ended Recurring Donation is moved to a closed status.</inlineHelpText>
        <label>Open Opportunity Behavior on RD Close</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Forecast_Months__c</fullName>
        <defaultValue>12</defaultValue>
        <description>Number of months worth of open Opportunities to be created when using an open-ended Recurring Donation.  Determined by the Last Payment Date field.</description>
        <inlineHelpText>Number of months from today worth of open Opportunities to be created when using open-ended Recurring Donations. WARNING: Reducing this value will result in extra Opportunities being deleted.  Increasing it will launch a batch process to add Opportunities</inlineHelpText>
        <label>Opportunity Forecast Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Update_URL__c</fullName>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Package Update URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Opportunity Record Type used when Recurring Donation Opportunities are created.</description>
        <inlineHelpText>Opportunity Record Type used when Recurring Donation Opportunities are created.</inlineHelpText>
        <label>Opportunity Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Check_Interval__c</fullName>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Update Check Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Recurring Donations Settings</label>
</CustomObject>